--- a/HW1/Makefile
+++ b/HW1/Makefile
@@ -1,4 +1,4 @@
 all:
-	matlab -nojvm -nodisplay -nosplash -r decisiontree | tail -n +11
+	matlab -nojvm -nodisplay -nosplash -r "decisiontree IvyLeague.txt" | tail -n +11
 test:
 	matlab -nojvm -nodisplay -nosplash -r test | tail -n +11
