--- a/HW1/Makefile
+++ b/HW1/Makefile
@@ -2,3 +2,5 @@ all:
 	matlab -nojvm -nodisplay -nosplash -r "decisiontree IvyLeague.txt" | tail -n +11
 test:
 	matlab -nojvm -nodisplay -nosplash -r test | tail -n +11
+matlab:
+	matlab -nojvm -nodisplay -nosplash
