--- a/HW1/Makefile
+++ b/HW1/Makefile
@@ -1,5 +1,5 @@
 all:
-	matlab -nojvm -nodisplay -nosplash -r "decisiontree('IvyLeague.txt',1,1,'1')" | tail -n +11
+	matlab -nojvm -nodisplay -nosplash -r "decisiontree('IvyLeague.txt',1,1,'1');exit" | tail -n +11
 test:
 	matlab -nojvm -nodisplay -nosplash -r test | tail -n +11
 matlab:
